[gd_scene load_steps=4 format=3 uid="uid://d4nmrx8unfnja"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_prg1o"]
[ext_resource type="Texture2D" uid="uid://cur6l5x623ned" path="res://UI/Backgrounds/menu.png" id="1_sbxvq"]
[ext_resource type="FontFile" uid="uid://bd22cxbxr71he" path="res://Fonts/Satoshi-Variable.ttf" id="3_wkq46"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_prg1o")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_sbxvq")
centered = false

[node name="Button1" type="Button" parent="."]
offset_right = 153.0
offset_bottom = 99.0
focus_mode = 0
theme_override_fonts/font = ExtResource("3_wkq46")
theme_override_font_sizes/font_size = 54
text = "Text"
flat = true

[node name="Button2" type="Button" parent="."]
offset_right = 153.0
offset_bottom = 99.0
focus_mode = 0
theme_override_fonts/font = ExtResource("3_wkq46")
theme_override_font_sizes/font_size = 54
text = "Text"
flat = true

[node name="Button3" type="Button" parent="."]
offset_right = 153.0
offset_bottom = 99.0
focus_mode = 0
theme_override_fonts/font = ExtResource("3_wkq46")
theme_override_font_sizes/font_size = 54
text = "Text"
flat = true

[node name="Button4" type="Button" parent="."]
offset_right = 153.0
offset_bottom = 99.0
focus_mode = 0
theme_override_fonts/font = ExtResource("3_wkq46")
theme_override_font_sizes/font_size = 54
text = "Text"
flat = true

[node name="Button5" type="Button" parent="."]
offset_right = 153.0
offset_bottom = 99.0
focus_mode = 0
theme_override_fonts/font = ExtResource("3_wkq46")
theme_override_font_sizes/font_size = 54
text = "Text"
flat = true

[node name="Button6" type="Button" parent="."]
offset_right = 153.0
offset_bottom = 99.0
focus_mode = 0
theme_override_fonts/font = ExtResource("3_wkq46")
theme_override_font_sizes/font_size = 54
text = "Text"
flat = true

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
